storage/innobase/handler/ha_innodb.cc
@@ -16772,7 +16772,8 @@ ha_innobase::cmp_ref(
 		}
 
 		if (result) {
-
+			if (key_part->key_part_flag & HA_REVERSE_SORT)
+				result = -result;
 			return(result);
 		}
 
